data/derived/comb/progs/unify/prog2819.ml.out
Characters 34-37:
  let stringOfList f l = sepConcat (" " (List.map(f l)));;
                                    ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
